--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 	<!-- PLEASE DO NOT CHANGE THE HTML -->
 	
 	<ul>
-		<li>First <a href="#">link</a></li>
-		<li>Second <a href="#">link</a></li>
-		<li>Third <a href="#">link</a></li>
-		<li>Fourth <a href="#">link</a></li>
-		<li>Fifth <a href="#">link</a></li>
-		<li>Sixth <a href="#">link</a></li>
-		<li>Seventh <a href="#">link</a></li>
+		<li>First <a href="1#">link</a></li>
+		<li>Second <a href="1#">link</a></li>
+		<li>Third <a href="1#">link</a></li>
+		<li>Fourth <a href="1#">link</a></li>
+		<li>Fifth <a href="1#">link</a></li>
+		<li>Sixth <a href="1#">link</a></li>
+		<li>Seventh <a href="1#">link</a></li>
 	</ul>
 	
 	<form>
